🏷️ tsconfig 오류 수정

--- a/packages/mogui/tsconfig.json
+++ b/packages/mogui/tsconfig.json
@@ -16,8 +16,7 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    "components/**/*.tsx"
+    "**/*.tsx"
   ],  
   "exclude": [
     "node_modules",
