--- a/packages/mogui/tsconfig.json
+++ b/packages/mogui/tsconfig.json
@@ -12,7 +12,11 @@
     "target": "es6",
     "lib": ["dom", "es2017"],
     "strict": false,
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/hooks/*": ["hooks/*"]
+    }
   },
   "include": [
     "**/*.ts",
