--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "private": true,
+  "name": "mogui",
+  "author": "metheduxk@gmail.com",
+  "description": "momogoyo's MUI",
+  "license": "ISC",
+  "version": "0.0.1",
+  "main": "index.js",
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -12,5 +17,12 @@
     "turbo": "latest"
   },
   "packageManager": "pnpm@8.6.10",
-  "name": "mogui"
+  "dependencies": {
+    "eslint-scope": "^7.2.2",
+    "eslint-visitor-keys": "^3.4.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/momogoyo/mogui"
+  }
 }
