👷 npm 배포를 위한 빌드 구성

--- a/packages/mogui/tsconfig.json
+++ b/packages/mogui/tsconfig.json
@@ -1,27 +1,22 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "rootDir": "src",
     "outDir": "dist",
+    "allowJs": true,
+    "moduleResolution": "node",
     "jsx": "preserve",
     "declaration": true,
     "declarationDir": "types",
-    "module": "esnext",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "target": "es6",
-    "lib": ["dom", "es2017"],
-    "strict": false,
-    "incremental": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
     "paths": {
-      "..//*": ["components/*"],
-      "@hooks/*": ["hooks/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ],  
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "dist"
