--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "main": "index.js",
   "scripts": {
     "build": "turbo run build",
+    "build:mogui": "pnpm --filter=@momogoyo/mogui build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "publish:mogui": "pnpm --filter=@momogoyo/mogui publish"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
