--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,20 +2,22 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",    
-    "jsx": "react-jsx",
+    "outDir": "dist",
+    "allowJs": true,
+    "moduleResolution": "node",
     "declaration": true,
     "declarationDir": "types",
+    "noImplicitAny": false,
+    "skipLibCheck": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
     "src/**/*"
-  ],  
+  ],
   "exclude": [
     "node_modules",
-    "dist",
-    "**/*.spce.ts"
+    "dist"
   ]
 }
