--- a/packages/mogui/package.json
+++ b/packages/mogui/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@momogoyo/mogui",
   "version": "0.0.6",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/mogui.umd.js",
+  "module": "./dist/mogui.mjs",
   "types": "./types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/mogui.mjs",
+      "require": "./dist/mogui.umd.js"
     }
   },
   "license": "MIT",
@@ -17,25 +17,27 @@
     "publish": "pnpm build && npm publish",
     "generate:component": "turbo gen react-component"
   },
-  "peerDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@turbo/gen": "^1.10.12",
     "@types/node": "^20.5.2",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "@vitejs/plugin-react": "^4.1.0",
+    "styled-jsx": "4.0.1",
     "typescript": "^4.5.2",
     "vite": "^4.5.0"
+  },
+  "dependencies": {
+    "@momogoyo/shared": "workspace:^"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "author": "metheduxk@gmail.com",
   "description": "momogoyo's MUI",
   "files": [
     "dist",
     "types"
-  ],
-  "dependencies": {
-    "@momogoyo/shared": "workspace:^"
-  }
+  ]
 }
