--- a/packages/mogui/package.json
+++ b/packages/mogui/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/styled-jsx": "^3.4.4",
     "@vitejs/plugin-react": "^4.1.0",
     "styled-jsx": "4.0.1",
     "typescript": "^4.5.2",
