--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,8 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
-    "typescript": "^4.5.3"
+    "@types/styled-components": "^5.1.29",
+    "typescript": "^4.5.3",
+    "styled-components": "^6.1.0"
   }
 }
