🚧 selectInput 컴포넌트 추가

--- a/packages/mogui/package.json
+++ b/packages/mogui/package.json
@@ -12,7 +12,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "tsc && vite build --watch",
+    "dev": "tsc --watch && vite build --watch",
     "build": "tsc && vite build",
     "publish": "pnpm build && npm publish",
     "generate:component": "turbo gen react-component"
